--- a/src/App.scss
+++ b/src/App.scss
@@ -1,166 +1,415 @@
 @import "~bootstrap/scss/bootstrap";
 
 $resy-color: #eb1700;
-    
 
 .App {
   // text-align: center;
-  font-family:  America,Helvetica,Verdana,sans-serif;
+  font-family: America, Helvetica, Verdana, sans-serif;
 }
 
-.nav-bar{
-  .resy-logo{
-    color: white!important;
+.nav-bar {
+  .resy-logo {
+    color: white !important;
     background-color: $resy-color;
     padding: 0.3rem 0.5rem 0.3rem 0.8rem;
     letter-spacing: 0.3rem;
     font-weight: bold;
-  
   }
-  
-  .city-dropdown{
-    a{
-      color: $resy-color!important;
-      font-family: Beatrice,GT America,Helvetica,Verdana,sans-serif;
+
+  .city-dropdown {
+    a {
+      color: $resy-color !important;
+      font-family: Beatrice, GT America, Helvetica, Verdana, sans-serif;
       font-size: 12px;
       font-weight: bold;
-      letter-spacing: -.15px;
+      letter-spacing: -0.15px;
       line-height: 1;
     }
-    
   }
 }
 
-.discover{
+.discover {
   margin-top: 3rem;
-  .top-story{
-    // background-color: red; 
+  .top-story {
+    // background-color: red;
     position: relative;
-    .top-story-img{
+    .top-story-img {
       width: 100%;
-      img{
+      img {
         width: 100%;
         padding-bottom: 3%;
-        @media (min-width: 1400px){
+        @media (min-width: 1400px) {
           padding-left: 25%;
-         
         }
-        @media (min-width: 768px) and (max-width: 1399px){
+        @media (min-width: 768px) and (max-width: 1399px) {
           padding-left: 5%;
         }
       }
     }
-  
-    .top-story-text{
+
+    .top-story-text {
       position: absolute;
       bottom: 0;
       background-color: white;
       // width: 100%;
-      @media (max-width: 768px){
+      @media (max-width: 768px) {
         position: relative;
         width: 100%;
         padding: 5%;
       }
-      @media (min-width: 768px) and (max-width: 1200px){
+      @media (min-width: 768px) and (max-width: 1200px) {
         width: 50%;
       }
-      @media (min-width: 1200px) and (max-width: 1400px){
+      @media (min-width: 1200px) and (max-width: 1400px) {
         width: 40%;
       }
-      @media (min-width: 1400px){
+      @media (min-width: 1400px) {
         width: 30%;
       }
-      
-      
-      h4{
+
+      h4 {
         color: $resy-color;
         font-size: 16px;
         font-weight: 700;
       }
-      a{
+      a {
         color: black;
         font-size: 18px;
         font-weight: 800;
       }
     }
   }
-  
-  .discover-nav{
-    b{
+
+  .discover-nav {
+    b {
       display: block;
       line-height: 1.2;
       margin-bottom: 0.7rem;
       font-size: 14px;
     }
-  
-    p{
+
+    p {
       font-size: 12px;
       display: block;
       line-height: 1rem;
     }
-  
-    .blog-links-container{
+
+    .blog-links-container {
       display: flex;
       flex-direction: column;
       margin-bottom: 5px;
     }
-    
+
     .blog-link {
       color: #2a2a2a;
       display: inline-block;
       line-height: 24px;
-      font-family: Beatrice,GT America,Helvetica,Verdana,sans-serif;
+      font-family: Beatrice, GT America, Helvetica, Verdana, sans-serif;
       font-size: 12px;
       font-weight: 700;
       text-decoration: none;
     }
-  
-  
   }
 }
 
-.BlogPostGrid{
+.BlogPostGrid {
   overflow-x: scroll;
-  .card{
+  .card {
     border: unset;
   }
-  .card-img-top{
+  .card-img-top {
     width: 100%;
     height: 10vw;
-    object-fit:cover;
-    @media (max-width: 576px){
+    object-fit: cover;
+    @media (max-width: 576px) {
       height: 40vw;
     }
   }
-  .card-title{
+  .card-title {
     color: $resy-color;
     font-size: 14px;
     font-weight: 700;
   }
-  .card-text{
+  .card-text {
     font-size: 14px;
   }
 }
 
-.BlogPostGrid::-webkit-scrollbar{
+.BlogPostGrid::-webkit-scrollbar {
   display: none;
 }
 
-.restaurants-collection{
-  .mobile{
-    color: red ;
+.restaurants-collection {
+  .mobile {
+    color: red;
+
+    .card-header {
+      padding: unset;
+      .nav {
+        margin-left: unset;
+
+        .nav-item {
+          a {
+            text-align: center;
+            padding-bottom: 18px;
+            border: unset;
+            svg {
+              fill: $resy-color;
+              position: relative;
+              top: -25px;
+            }
+            h1 {
+              color: $resy-color;
+              font-size: 16px;
+              font-weight: 700;
+              margin-top: -18px;
+            }
+          }
+        }
+      }
+    }
+
+    .card-body {
+      overflow: scroll;
+      max-height: 350px;
+    }
+    a {
+      text-decoration: unset !important;
+    }
+    .list-item-container {
+      // margin-block: 5px;
+      padding: 0.7rem 1.5rem;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.125) !important;
+      border: unset;
+      .list-item {
+        align-items: center;
+
+        .restaurant-image-container {
+          padding-inline: unset;
+          text-align: center;
+          .restaurant-image {
+            width: 100%;
+          }
+        }
+
+        .restaurant-details {
+          padding-inline: 1.5rem;
+          h1 {
+            font-size: 14px;
+            font-weight: 700;
+            margin-bottom: unset;
+          }
+          p {
+            font-size: 12px;
+            margin-bottom: unset;
+          }
+        }
+      }
+    }
   }
 
-  .landscape{
-    .card{
+  .landscape {
+    .card {
       margin-inline: 2%;
       border-radius: 1rem;
     }
-    .card-title{
+    .card-title {
       text-align: center;
-      color: $resy-color;
-      font-size: 20px;
-      font-weight: 700;
+      margin-bottom: 18px;
+      svg {
+        fill: $resy-color;
+        position: relative;
+        top: -25px;
+      }
+      h1 {
+        color: $resy-color;
+        font-size: 16px;
+        font-weight: 700;
+        margin-top: -18px;
+      }
+    }
+
+    .card-text {
+      overflow: scroll;
+      max-height: 350px;
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      a {
+        text-decoration: unset !important;
+      }
+      .list-item-container {
+        // margin-block: 5px;
+        padding: 0.7rem 1.5rem;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.125) !important;
+        border: unset;
+        .list-item {
+          align-items: center;
+
+          .restaurant-image-container {
+            padding-inline: unset;
+            text-align: center;
+            .restaurant-image {
+              width: 100%;
+            }
+          }
+
+          .restaurant-details {
+            padding-inline: 1.5rem;
+            h1 {
+              font-size: 14px;
+              font-weight: 700;
+              margin-bottom: unset;
+            }
+            p {
+              font-size: 12px;
+              margin-bottom: unset;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.restaurant-page {
+  .restaurant-image-mobile {
+    width: 100%;
+  }
+
+  .restaurant {
+    margin-top: 2rem;
+    .left-pane {
+      .restaurant-details {
+        align-items: flex-end;
+        .buttons {
+          @media (min-width: 768px) {
+            text-align: end;
+            padding-bottom: 1rem;
+          }
+
+          button {
+            background-color: $resy-color;
+            border-color: unset;
+            border-radius: 50px;
+            margin-inline: 5px;
+          }
+        }
+      }
+      .why-we-like {
+        margin-bottom: 1rem;
+      }
+
+      .reservation-details {
+        margin-bottom: 1rem;
+        .dropdown-toggle {
+          width: 100%;
+          &:hover {
+            border-color: $resy-color;
+            background-color: $resy-color;
+          }
+          &:active {
+            border-color: $resy-color;
+            background-color: $resy-color;
+            &:focus {
+              box-shadow: unset;
+              border-color: $resy-color;
+              background-color: $resy-color;
+            }
+          }
+          .dropdown-menu {
+            width: 100%;
+          }
+        }
+
+        @media (min-width: 768px) {
+          padding: 0 5% 0 5%;
+        }
+      }
+
+      .quick-date-picker {
+        text-align: center;
+        margin-bottom: 1rem;
+        .date {
+          // text-align: center;
+        }
+        .day {
+        }
+      }
+
+      .time-picker {
+        // padding: 0 1rem;
+        margin-bottom: 1rem;
+
+        .time-tile {
+          margin: 0.2rem;
+          padding: 2%;
+          background-color: $resy-color;
+          border: unset;
+          @media (min-width: 768px) {
+            margin: 0.4rem;
+            padding: 1%;
+          }
+        }
+        @media (max-width: 767px) {
+          justify-content: center;
+          .col-3 {
+            width: 30%;
+          }
+        }
+
+        // .col-md-2{
+        //   width: 17.67%;
+        // }
+
+        // .col-lg-2{
+        //   width: 18.67%;
+        // }
+      }
+    }
+
+    .right-pane {
+      .restaurant-image {
+        width: 100%;
+        border-radius: 2rem !important;
+        margin-bottom: 2rem;
+      }
+
+      .safety-measurements {
+        .safety-measurements-icon {
+          p {
+            font-size: calc(0.5rem + 0.3vw);
+          }
+        }
+      }
+
+      .location-container {
+        border: 1px solid #eaeaea;
+
+        .map {
+          padding: unset;
+        }
+
+        .address {
+          padding: 1rem 1.5rem;
+          p {
+            margin-bottom: unset;
+          }
+          .social-media-icons-container {
+            padding-block: 0.5rem;
+          }
+        }
+
+        .contact-info {
+          border: 1px solid #eaeaea;
+          padding: 0.5rem;
+          margin-left: unset;
+          a {
+            text-decoration: unset;
+          }
+        }
+      }
     }
   }
 }
